# ddogreen

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ps1  build.sh  install.sh  test.sh  test_logging.cpp  test_rate_limiter_standalone  test_rate_limiter_standalone.cpp  uninstall.sh
.github/: copilot-instructions.md
.github/workflows/: build-and-package.yml  build-scripts.yml  ci.yml  functional-test.yml  release.yml  unified-ci-cd.yml
build-test/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  ddogreen
build-test/Testing/Temporary/: CTestCostData.txt
build-test/tests/: CTestTestfile.cmake  test_config  test_config[1]_include.cmake  test_config[1]_tests.cmake
config/: ddogreen.conf.default  ddotlp-logrotate  ddotlp.conf
include/: activity_monitor.h  config.h  daemon.h  logger.h  rate_limiter.h  security_utils.h  tlp_manager.h
include/platform/: idaemon.h  iplatform_utils.h  ipower_manager.h  iservice_manager.h  isignal_handler.h  isystem_monitor.h  platform_factory.h
memory-bank/: active.md  activeContext.md  cicdPipeline.md  codingStandards.md  context.md  developmentGuide.md  productContext.md  progress.md  projectbrief.md  standards.md  systemPatterns.md  techContext.md  testingStandards.md
packaging/debian/: postinst  postrm  prerm
packaging/linux/deb/: postinst  postrm  prerm
packaging/linux/generic/: install.sh
packaging/linux/rpm/: post  postun  preun
packaging/linux/tgz/: installer.sh
packaging/windows/: ddogreen.ico.placeholder  mingw-toolchain.cmake
packaging/windows/msi/: ddogreen.wxs
packaging/windows/wix/: service-patch.xml
packaging/windows/zip/: installer.bat
scripts/: build.sh  test_packages.sh  test_power_management.sh
src/: activity_monitor.cpp  config.cpp  config_backup.cpp  daemon.cpp  logger.cpp  main.cpp  main.cpp.backup  rate_limiter.cpp  security_utils.cpp  tlp_manager.cpp
src/platform/: idaemon.cpp  platform_factory.cpp
src/platform/linux/: linux_daemon.cpp  linux_platform_utils.cpp  linux_power_manager.cpp  linux_service_manager.cpp  linux_signal_handler.cpp  linux_system_monitor.cpp
src/platform/macos/: macos_daemon.cpp  macos_platform_utils.cpp  macos_power_manager.cpp  macos_service_manager.cpp  macos_signal_handler.cpp  macos_system_monitor.cpp
src/platform/windows/: windows_daemon.cpp  windows_platform_utils.cpp  windows_power_manager.cpp  windows_service_manager.cpp  windows_signal_handler.cpp  windows_system_monitor.cpp
systemd/: ddops.service  ddotlp.service
test_build/: CPackConfig.cmake  CPackSourceConfig.cmake
tests/: CMakeLists.txt  README.md  test_activity_monitor.cpp  test_config.cpp  test_config_platform.cpp  test_integration.cpp  test_logger.cpp  test_packages.sh  test_platform_factory.cpp  test_rate_limiter.cpp  test_security.cpp  test_security_utils.cpp
tests/mocks/: mock_platform_utils.h  mock_power_manager.h  mock_signal_handler.h  mock_system_monitor.h
